--- a/bridgehand.glade
+++ b/bridgehand.glade
@@ -1551,7 +1551,7 @@ EW: %d</property>
 	    <widget class="GtkAlignment" id="alignment1">
 	      <property name="visible">True</property>
 	      <property name="xalign">1</property>
-	      <property name="yalign">0</property>
+	      <property name="yalign">0.259999990463</property>
 	      <property name="xscale">1</property>
 	      <property name="yscale">1</property>
 	      <property name="top_padding">0</property>
@@ -1564,7 +1564,7 @@ EW: %d</property>
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-		  <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
+		  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
 		  <property name="shadow_type">GTK_SHADOW_NONE</property>
 		  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
@@ -1590,8 +1590,8 @@ EW: %d</property>
 	      <property name="right_attach">3</property>
 	      <property name="top_attach">0</property>
 	      <property name="bottom_attach">1</property>
-	      <property name="x_options">fill</property>
-	      <property name="y_options">fill</property>
+	      <property name="x_options">shrink</property>
+	      <property name="y_options">expand|shrink|fill</property>
 	    </packing>
 	  </child>
 	</widget>
@@ -3834,7 +3834,7 @@ EW: %d</property>
 		    <widget class="GtkRadioButton" id="show_hand_ns">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">North/South</property>
+		      <property name="label" translatable="yes">North-South</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
@@ -3854,7 +3854,7 @@ EW: %d</property>
 		    <widget class="GtkRadioButton" id="show_hand_ew">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">East/West</property>
+		      <property name="label" translatable="yes">East-West</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
@@ -3936,7 +3936,7 @@ EW: %d</property>
 		    <widget class="GtkRadioButton" id="show_dd_ns">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">North/South</property>
+		      <property name="label" translatable="yes">North-South</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
@@ -3956,7 +3956,7 @@ EW: %d</property>
 		    <widget class="GtkRadioButton" id="show_dd_ew">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
-		      <property name="label" translatable="yes">East/West</property>
+		      <property name="label" translatable="yes">East-West</property>
 		      <property name="use_underline">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
